fix accordion right spacing

--- a/chipReact/src/components/ViewAccordian.css
+++ b/chipReact/src/components/ViewAccordian.css
@@ -3,12 +3,12 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 44%;
+    width: 45%;
     /* height: 20px; */
     font-size: small;
     /* margin-top: 9px; */
     margin-bottom: 0px;
-    margin-right: 6%;
+    margin-right: 5%;
     /* vertical-align: center; */
 }
 
